[package]
name = "proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.4.23", features = ["fltk-bundled"] }
fltk-theme = "0.1.4"
mysql = "24.0.0"
thiserror = "1.0.56"
winreg = "0.52.0"
rand = "0.7"
read-process-memory = "0.1.6"
windows = {version="0.52.0", features=["Win32_Foundation","Win32_UI","Win32_UI_WindowsAndMessaging","Win32_System","Win32_System_Threading","Win32_System_Diagnostics","Win32_System_Memory"]}
winapi = {version="0.3.9", features=["winuser"]}
tlhelp32 = "1.0.3"
winapi-comm = "0.1.0"
proc_mem = "0.1.6"
win_inet = "0.1.1"
libc = "0.2.152"